--- a/app/src/main/res/layout/chat_recycler_view_message_item.xml
+++ b/app/src/main/res/layout/chat_recycler_view_message_item.xml
@@ -1,38 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+                                             android:layout_width="match_parent"
                                              android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView android:layout_width="wrap_content"
+                                       android:maxWidth="270dp"
                                         app:cardCornerRadius="4dp"
                                         app:cardUseCompatPadding="true"
                                         android:id="@+id/reply_message_item_card"
-                                        android:layout_height="wrap_content"
+                                        android:layout_height="0dp"
                                         android:minHeight="32dp"
-                                        app:layout_constraintBottom_toBottomOf="parent"
                                         app:layout_constraintTop_toTopOf="parent"
                                         app:cardBackgroundColor="@color/colorPrimary"
                                         app:layout_constraintStart_toStartOf="parent"
                                         android:layout_marginLeft="8dp"
                                         android:layout_marginStart="8dp">
-        <TextView
+        <LinearLayout
                 android:layout_gravity="center"
-                android:text="Check"
                 android:maxWidth="270dp"
-                android:textColor="@color/cardview_light_background"
-                android:layout_width="match_parent"
+                android:orientation="vertical"
                 android:padding="4dp"
-                android:layout_height="match_parent" android:id="@+id/reply_message_item_text"/>
-    </android.support.v7.widget.CardView>
+                android:layout_width="match_parent" android:layout_height="match_parent">
+            <TextView
+                    android:text="Check"
+                    android:maxWidth="270dp"
+                    android:textColor="@color/cardview_light_background"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/reply_message_item_text"/>
 
-    <android.support.v7.widget.CardView android:layout_width="wrap_content"
+            <ImageView
+                    android:visibility="gone"
+                    android:id="@+id/reply_message_image"
+                    android:layout_width="270dp"
+                    android:layout_height="wrap_content"/>
+
+
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp"
+              android:visibility="gone"
+              android:id="@+id/button_recycler_view"
+              app:layout_constraintTop_toBottomOf="@+id/reply_message_item_card"
+              app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+              android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
+              android:layout_marginRight="16dp">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <androidx.cardview.widget.CardView android:layout_width="wrap_content"
                                         app:cardCornerRadius="4dp"
                                         app:cardUseCompatPadding="true"
                                         android:id="@+id/user_message_item_card"
                                         android:layout_height="wrap_content"
                                         android:minHeight="32dp"
-                                        app:layout_constraintBottom_toBottomOf="parent"
                                         app:layout_constraintTop_toTopOf="parent"
                                         app:cardBackgroundColor="@color/colorAccent"
                                         app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
@@ -45,5 +69,5 @@
                 android:layout_width="match_parent"
                 android:padding="4dp"
                 android:layout_height="match_parent" android:id="@+id/user_message_item_text"/>
-    </android.support.v7.widget.CardView>
-</android.support.constraint.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
