--- a/app/src/main/res/layout/chat_message_button.xml
+++ b/app/src/main/res/layout/chat_message_button.xml
@@ -5,7 +5,16 @@
     <Button android:layout_width="wrap_content"
             android:id="@+id/chat_message_button"
             android:layout_height="wrap_content"
+            android:minHeight="35dp"
+            android:textColor="@color/button_text_color"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-    />
+            android:text="CHECK"
+            android:background="@drawable/rounded_button"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:layout_marginTop="8dp" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
