--- a/app/src/main/res/layout/chat_recycler_view_message_item.xml
+++ b/app/src/main/res/layout/chat_recycler_view_message_item.xml
@@ -2,7 +2,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              android:layout_width="match_parent"
-                                             android:layout_height="wrap_content">
+
+        android:layout_height="wrap_content">
+
+    <com.github.ybq.android.spinkit.SpinKitView
+            android:id="@+id/loading_spinner"
+            style="@style/SpinKitView.Large.ThreeBounce"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:visibility="gone"
+            app:SpinKit_Color="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView android:layout_width="wrap_content"
                                        android:maxWidth="270dp"
@@ -22,6 +37,7 @@
                 android:orientation="vertical"
                 android:padding="4dp"
                 android:layout_width="match_parent" android:layout_height="match_parent">
+
             <TextView
                     android:text="Check"
                     android:maxWidth="270dp"
@@ -41,13 +57,15 @@
 
     </androidx.cardview.widget.CardView>
 
-    <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp"
-              android:visibility="gone"
-              android:id="@+id/button_recycler_view"
-              app:layout_constraintTop_toBottomOf="@+id/reply_message_item_card"
-              app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-              android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
-              android:layout_marginRight="16dp">
+    <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent" android:layout_height="wrap_content"
+                                               android:layout_marginTop="8dp"
+                                               android:visibility="visible"
+                                               android:id="@+id/button_recycler_view"
+                                               app:layout_constraintTop_toBottomOf="@+id/reply_message_item_card"
+                                               app:layout_constraintStart_toStartOf="parent"
+                                               android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
+                                               app:layout_constraintEnd_toEndOf="parent"
+                                               android:layout_marginEnd="16dp" android:layout_marginRight="16dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
