--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -3,15 +3,15 @@
     <item android:state_pressed="true" >
         <shape android:shape="rectangle"  >
             <corners android:radius="8dp" />
-            <solid android:color="@color/colorPrimary"/>
+            <solid android:color="@color/colorAccent"/>
 
-            <stroke android:width="5px" android:color="@color/colorPrimary" />
+            <stroke android:width="5px" android:color="@color/colorAccent" />
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="8dp" />
-            <stroke android:width="5px" android:color="@color/colorPrimary" />
+            <stroke android:width="5px" android:color="@color/colorAccent" />
         </shape>
 
     </item>
