--- a/app/src/main/res/layout/chat_message_button.xml
+++ b/app/src/main/res/layout/chat_message_button.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="wrap_content"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                                              android:layout_height="wrap_content">
-    <Button android:layout_width="wrap_content"
+    <Button android:layout_width="0dp"
             android:id="@+id/chat_message_button"
             android:layout_height="wrap_content"
-            android:minHeight="35dp"
+            android:textSize="12sp"
+            android:minHeight="30dp"
             android:textColor="@color/button_text_color"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:text="CHECK"
             android:background="@drawable/rounded_button"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
-            android:layout_marginTop="8dp" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
