--- a/app/src/main/res/layout/fragment_chat_room.xml
+++ b/app/src/main/res/layout/fragment_chat_room.xml
@@ -25,21 +25,30 @@
                                                  android:maxHeight="150dp" android:id="@+id/constraintLayout">
 
 
-        <EditText android:layout_width="320dp"
-                  android:layout_height="wrap_content"
-                  android:minWidth="320dp"
-                  app:layout_constraintLeft_toLeftOf="parent" android:layout_marginTop="8dp"
-                  app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-                  android:layout_marginBottom="8dp" android:id="@+id/message_text_input"
-                  app:layout_constraintEnd_toStartOf="@+id/message_send_button" android:layout_marginEnd="8dp"
-                  android:layout_marginRight="8dp" android:layout_marginLeft="8dp"/>
+        <EditText
+                android:id="@+id/message_text_input"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/message_send_button"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <Button android:layout_width="60dp" android:layout_height="40dp"
-                app:layout_constraintTop_toTopOf="@+id/message_text_input"
-                app:layout_constraintBottom_toBottomOf="@+id/message_text_input"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
-                android:layout_marginBottom="16dp" android:id="@+id/message_send_button"/>
+        <ImageButton android:layout_width="60dp"
+                     android:layout_height="40dp"
+                     android:background="@null"
+                     app:layout_constraintTop_toTopOf="@+id/message_text_input"
+                     app:layout_constraintBottom_toBottomOf="@+id/message_text_input"
+                     app:layout_constraintEnd_toEndOf="parent"
+                     android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
+                     android:layout_marginBottom="16dp" android:id="@+id/message_send_button"
+                     android:src="@drawable/send_button_selector"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     <ImageView
