--- a/app/src/main/res/layout/chat_message_button.xml
+++ b/app/src/main/res/layout/chat_message_button.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                                              android:layout_height="wrap_content">
-    <Button android:layout_width="0dp"
+    <Button android:layout_width="270dp"
+            android:maxWidth="270dp"
             android:id="@+id/chat_message_button"
             android:layout_height="wrap_content"
             android:textSize="12sp"
@@ -13,6 +14,7 @@
             android:text="CHECK"
             android:background="@drawable/rounded_button"
             android:paddingLeft="8dp"
+            android:padding="8dp"
             android:paddingRight="8dp"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
